hphp/test/zend/good/ext-standard-time/bug60222.php
<?php
	var_dump(time_nanosleep(-1, 0));
	var_dump(time_nanosleep(0, -1));
?>
===DONE===